# maker

./: .gitignore  README.md  pyproject.toml  readme.txt
src/maker/: __init__.py  agents.py  app.py  cli.py  config.py  errors.py  files.py  generation.py  logging_utils.py  models.py  repository.py  services.py
src/maker/static/: styles.css
src/maker/templates/: base.html  index.html  project_detail.html
src/maker_courseware.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_app.py
